--- a/public/admin/templates/inbox.html
+++ b/public/admin/templates/inbox.html
@@ -5,11 +5,11 @@
     <div class="right">
         <div class="wrapper">
             <span class="label">{{type}}</span>
-            <span class="subject">{{Subject}} -</span>
-            <span class="content">{{Content}}</span>
-            <span class="time">{{date}}</span>
+            <span class="subject">{{Subject}}</span>
+            <span class="content"> - {{Content}}</span>
         </div>
     </div>
+    <div class="time">{{date}}</div>
     <div class="actions">
         <button type="button" class="material-symbols-outlined delete delete-btn">delete</button>
     </div>
