--- a/public/admin/templates/sent.html
+++ b/public/admin/templates/sent.html
@@ -4,10 +4,10 @@
     </div>
     <div class="right">
         <div class="wrapper">
-        <span class="subject">{{Subject}} - </span>
-        <span class="content">{{Content}} </span>
-        <span class="time">{{date}}</span>
+            <span class="subject">{{Subject}}</span>
+            <span class="content"> - {{Content}} </span>
         </div>
+        <div class="time">{{date}}</div>
     </div>
     <div class="actions">
         <button type="button" class="material-symbols-outlined delete">delete</button>
