--- a/public/admin/defaultdashboard.css
+++ b/public/admin/defaultdashboard.css
@@ -340,11 +340,16 @@ body .sub-body {
     display: flex;
     position: fixed;
     z-index: 15;
-    padding: 10px;
+    padding: 10px 20px;
     width: 100%;
     background: var(--primary-color);
     color: #f9f9f99f;
     box-shadow: 4px 2px 10px rgba(0, 0, 0, 0.219);
+    & {
+        @media (width<=985px) {
+            padding: 10px 0px;
+        }
+    }
 }
 
 
@@ -494,4 +499,20 @@ body .sub-body {
     justify-content: space-between;
     align-items: center;
     font-size: 1.3rem;
+}
+
+@media (width<= 985px) {
+    .overview-text {
+        margin-left: 20px;
+    }
+}
+
+@media (width <= 768px) {
+    .empty-div{ 
+        height: 10%;
+    }
+    .overview {
+        justify-content: center;
+        height: 100%;
+    }
 }
