--- a/public/admin/overview/overview.css
+++ b/public/admin/overview/overview.css
@@ -272,20 +272,19 @@ input[type="number"] {
 }
 
 .table-wrapper::-webkit-scrollbar {
-    width: 8px;
-    height: 8px;
-    padding: 5px;
-    display: none;
+    height: 5px;
+    width: 5px;
+    cursor: pointer;
 }
 
-/* .table-container::-webkit-scrollbar-button {
-} */
+.table-container::-webkit-scrollbar-track {
+    background-color: #DFE9EB;
+}
 
 .table-wrapper::-webkit-scrollbar-thumb {
     background-color: #888;
-    border-radius: 10px;
-    margin: 5px;
-    width: 5px;
+    border-radius: 5px;
+    cursor: pointer;
     transition: background-color 0.3s ease;
 }
 
@@ -372,6 +371,10 @@ input[type="number"] {
     .grid-row-4-column-span-2 {
         grid-column: span 0;
     }
+    
+}
+
+@media (width <= 950px) {
     
 }
 
