--- a/public/admin/templates/sent.html
+++ b/public/admin/templates/sent.html
@@ -1,6 +1,6 @@
 <div class="message-prev">
     <div class="left">
-        <span class="sender">To: {{Recipients}}</span>
+        <span class="sender">To: {{name}}</span>
     </div>
     <div class="right">
         <div class="wrapper">
