--- a/public/admin/templates/inbox.html
+++ b/public/admin/templates/inbox.html
@@ -6,7 +6,7 @@
         <div class="wrapper">
             <span class="label">{{type}}</span>
             <span class="subject">{{Subject}}</span>
-            <span class="content"> - {{Content}}</span>
+            <span class="content" id="preview-content"> - {{Content}}</span>
         </div>
     </div>
     <div class="time">{{date}}</div>
