--- a/public/admin/defaultdashboard.css
+++ b/public/admin/defaultdashboard.css
@@ -269,8 +269,7 @@ body .sub-body {
 .fa-duotone.fa-diagram-lean-canvas,
 .fa-duotone.fa-pen-to-square,
 .fa-duotone.fa-megaphone.fa-rotate-by,
-.fa-duotone.fa-right-from-bracket.fa-lg,
-.fa-solid.fa-arrow-left{  /* styling for font awesome icons*/
+.fa-duotone.fa-right-from-bracket.fa-lg{  /* styling for font awesome icons*/
     margin-right: 10px;
     color: #030c3ddc;
 }
@@ -291,6 +290,7 @@ body .sub-body {
     animation: jello-horizontal 0.9s ease-in both;
 }
 
+.fa-duotone.fa-solid.fa-arrow-left,
 .fa-duotone.fa-solid.fa-house { /* styling for font awesome icons*/
     color: white;
 }
@@ -347,6 +347,10 @@ body .sub-body {
     box-shadow: 4px 2px 10px rgba(0, 0, 0, 0.219);
     & {
         @media (width<=985px) {
+            padding: 10px 20px;
+        }
+
+        @media (width<=785px) {
             padding: 10px 0px;
         }
     }
