--- a/public/admin/view-users/view-users.css
+++ b/public/admin/view-users/view-users.css
@@ -101,7 +101,6 @@ input[type="number"] {
     height: fit-content;
     max-height: 380px;
     /* border: 1.5px solid var(--primary-color); */
-    background-color: #ffffff;
     border-radius: 5px;
     overflow-x: auto;
     overflow-y: scroll;
@@ -185,6 +184,9 @@ input[type="number"] {
 .users-table tr:nth-child(even) {
     background-color: #f9f9f9;
 }
+.users-table tr:nth-child(odd) {
+    background-color: #fff;
+}
 
 .table-container::-webkit-scrollbar {
     width: 8px;
@@ -213,18 +215,19 @@ input[type="number"] {
 }
 
 .dashboard-footer {
-    bottom: 0;
+    width: 75%;
+    right: 0;
+    display: flex;
+    align-items: center;
+    justify-content: center;
     position: fixed;
-    width: 100%;
-    display: block;
-    align-content: center;
-    background: #fff;
+    bottom: 0;
 }
 
 .footer-container {
     display: flex;
     color: var(--secondary-color);
-    padding: 0px 0px 10px 30px;
+    padding: 0px 0px 10px 20px;
     transition: color .2s ease-out;
 }
 
@@ -256,7 +259,7 @@ input[type="number"] {
 }
 
 .search-box > .search-parent > input {
-    width: 350px;
+    flex-basis: 350px;
     height: 100%;
     border-radius: 25px;
     border: none;
@@ -334,7 +337,7 @@ input[type="number"] {
 .pagination {
     width: 400px;
     display: flex;
-    justify-content: space-evenly;
+    justify-content: center;
     outline: none;
     text-decoration: none;
 }
@@ -396,4 +399,29 @@ input[type="number"] {
 
 .hidden {
     display: none;
+}
+
+@media (width <= 768px) {
+    .empty-div {
+        height: 0;
+    }
+    
+    .dashboard-footer {
+        left: 0;
+        justify-content: flex-start;
+    }
+    
+}
+
+@media (width <= 410px) {
+    .footer-container {
+        padding: 0px 0px 10px 10px;
+    }
+}
+
+@media (width <= 368px) {
+    .footer-container {
+        padding: 0px 0px 10px 0px;
+    }
+    
 }
