--- a/public/admin/messages/messages.css
+++ b/public/admin/messages/messages.css
@@ -137,7 +137,10 @@ input[type="number"] {
 .inner-body {
 
 }
+/* .dashboard-content-box{
+    overflow: hidden;
 
+} */
 .messages .scroll::-webkit-scrollbar{
     width: 10px;
 
@@ -407,8 +410,11 @@ button[title='compose']:hover {
     padding: 3px 10px 5px 8px;
     /* display: flex; */
     align-items: center;
+    z-index: 30;
     /* margin: 8px 8px 0px 0px; */
 }
+
+
 
 .message-prev:hover{
     /* box-shadow: 0px 2px 2px 1px rgba(0, 0, 0, 0.3); */
@@ -419,6 +425,7 @@ button[title='compose']:hover {
 .message-prev:hover .actions {
     display: flex;
 }
+
 
 .time {
     font-size: 12px;
@@ -1209,3 +1216,19 @@ button.delete:hover {
     }
 
 }
+
+@media (width < 390px) {
+    .recipient-details .admin-icon {
+        width: 30px;
+        height: 30px;
+        font-size: 18px;
+        font-weight: 400;
+    }
+}
+
+@media (width < 380px) {
+    .recipient-details .admin-icon {
+        display: none;
+    }
+}
+
