--- a/public/admin/view-cell-reports/view-cell-reports.css
+++ b/public/admin/view-cell-reports/view-cell-reports.css
@@ -473,25 +473,24 @@ input[type="number"] {
     justify-content: center;
     display: flex;
     top: 50%;
-    padding: 12px 30px;
+    padding: 8px 20px;
     bottom: 50%;    
-    z-index: 20;
+    z-index: 22;
     background: #3d3d3da1;
     position: absolute;
     animation: fade 150ms ease-in;
-    pointer-events: none;
     transform: translate(0%, -50%);
 }
 
 
 .reports-wrapper {
     animation: fade 150ms ease-in;
-    width: 700px;
+    width: 75%;
+    min-width: 300px;
     height: 450px;
     background-color:  #f9f9f9;
     border-radius: 10px;
     display: block;    
-    pointer-events: auto;
 }
 
 .skeleton-text {
@@ -616,7 +615,7 @@ input[type="number"] {
 
 .reports-table-parent > table {
     background-color: #ffff;
-    table-layout: fixed;
+    /* table-layout: fixed;style={styles.bottomBar} */
     width: 100%;
     height: 100%;
     border-collapse: collapse;
@@ -625,6 +624,7 @@ input[type="number"] {
 .reports-table-parent > table td,
 .reports-table-parent > table th {
     overflow: hidden;
+    text-overflow: ellipsis;
     background: #ffffff;
     white-space: nowrap; 
     text-transform: capitalize;
@@ -635,8 +635,6 @@ input[type="number"] {
     background: #ffffff;
     box-shadow: 3px 1px 5px 2px rgba(0, 0, 0, 0.062);
     font-weight: bold;
-    position: sticky; 
-    top: 0;
     text-wrap: wrap;
     z-index: 10;
 }
@@ -701,6 +699,10 @@ input[type="number"] {
     .dashboard-footer {
         left: 0;
         justify-content: flex-start;
+    }
+    .reports-wrapper {
+        animation: fade 150ms ease-in;
+        width: 100%;
     }
     
 }
