--- a/public/dashboard/style.css
+++ b/public/dashboard/style.css
@@ -366,16 +366,18 @@ hr {
     color: #f9f9f99f;
     box-shadow: 4px 2px 10px rgba(0, 0, 0, 0.219);
     & {
+
         @media (width<=985px) {
             padding: 10px 20px;
         }
 
-        @media (width<=785px) {
-            padding: 10px 0px;
-        }
     }
 }
-
+@media (width < 768px) {
+    .dashboard-content-title {
+        padding: 10px 0px;
+    }
+}
 
 .dashboard-content-title h1 { /* selective styling for the h1 tag */
     letter-spacing: 2.5px;
@@ -488,7 +490,7 @@ hr {
 
 @media (width <= 768px) {
     .empty-div{ 
-        height: 10%;
+        height: 30%;
     }
     .overview {
         justify-content: center;
