--- a/public/pages/login/login.css
+++ b/public/pages/login/login.css
@@ -1,8 +1,33 @@
+@import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
+
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
+
+a {
+    color: inherit;
+    text-decoration: none;
+}
+
+body {
+    font-family: 'Roboto', sans-serif;
+    -webkit-font-smoothing: antialiased;
+    -moz-osx-font-smoothing: grayscale;
+    text-align: center;
+    max-width: 100vw;
+    min-height: 100vh;
+    color: #04125c;
+    line-height: 1.6;
+}
+
+
 .login-form-body{
     position: relative;
     min-height: 100vh;
     max-width: 100%;
-    background-image: url(../src/Pastor-Chris-Oyakhilome.jpg);
+    background-image: url(../../src/Pastor-Chris-Oyakhilome.jpg);
     background-repeat: no-repeat;
     background-position: center;
     background-size: cover;
@@ -12,31 +37,21 @@
 
 .login-form-sub-body{
     min-height: 100vh;
+    display: flex;
+    padding: 0px 15px;
+    justify-content: center;
+    align-items: center;
 }
 
 .login-form-body::before{
     content: "";
-    position: absolute;
     width: 100%;
-    top: 0;
-    left: 0;
     height: 100%;
-    background: inherit; 
-    filter: blur(8px);
+    display: block;
+    background: inherit;
+    filter: blur(2.8px);
     z-index: -1;
-}
-
-.login-form-body img{
-    height: 870px;
     position: absolute;
-    z-index: -1;
-    top: 0;
-    left: 0;    
-    border: 1px solid rgba(255, 255, 255, 0.047);
-
-    object-fit: cover;  
-    object-position: center;
-    filter: blur(8px);
 }
 
 .login-form-sub-body {
@@ -50,14 +65,15 @@
     flex-direction: column;
     align-items: center;
     justify-content: space-around;
-    /* flex-wrap: wrap; */
     border: 1px solid rgba(255, 255, 255, 0.047);
     border-radius: 25px;
-    min-height: 450px;
-    min-width: 450px;
-    padding: 10px;
+    gap: 40px   ;
+    /* min-height: 450px; */
+    max-width: 450px;
+    flex: 1;
+    padding: 30px 10px;
     background: rgba(255, 255, 255, 0.1);
-    box-shadow: 0px 4px 30px rgba(0, 0, 0, 0.22);
+    box-shadow: 0px 4px 10px 2px rgba(0, 0, 0, 0.5);
     -webkit-backdrop-filter: blur(2.8px);
     backdrop-filter: blur(2.8px);
     color: #fff;
@@ -69,23 +85,37 @@
     align-items: center; 
     justify-content: center;
     animation: fade 0.5s linear;
-    padding: 5px;
+    gap: 40px;
+    width: 90%;
 }
 
 .login-form-text-container {
     text-align: center;
+    width: 100%;
 }
 
 .login-form-text-container h1 {
     font-size: 2.08rem;
     animation: fade 0.5s linear;
     text-shadow: 6px 4px rgba(0, 0, 0, 0.089);
+    & {
+        @media (max-width: 380px) {
+            font-size: 1.5rem;
+        }
+    }
 }
 
 .login-form-text-container p {
     color: #fff;
     animation: fade 0.5s linear;
-    font-size: 1.5rem;
+    font-size: 1.2rem;
+}
+
+.login-form-sub-container {
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+    gap: 15px;
 }
 
 .input-groups {
@@ -96,7 +126,6 @@
     align-items: baseline;
     justify-content: center;
     position: relative;
-    margin: 0px 0px 15px 0px;
 }
 
 .input-groups label {
@@ -104,8 +133,7 @@
     bottom: 8px;
     position: absolute;
     font-size: 1.1rem;
-    font-family: 'arial' sans-serif;
-    font-weight: 450;
+    font-weight: 400;
     pointer-events: none;
     letter-spacing: 0rem;
     transition: .1s linear;
@@ -116,8 +144,8 @@
 
 .input-groups input{
     display: block;
-    min-height: 45px;
-    min-width: 350px;
+    height: 45px;
+    width: 100%;
     outline: none;
     padding: 10px;
     border-radius: 5px;
@@ -125,9 +153,8 @@
     border-style: none;
     font-size: 1rem;
     font-weight: 400;
-    letter-spacing: 0rem;
+    letter-spacing: normal;
     background: none;
-    font-family: 'arial' sans-serif;
     color: rgb(255, 255, 255);
     border: 1px solid #fff;
     transition: border 0.2s ease, background 0.2s ease;
@@ -143,7 +170,7 @@ input:not(:placeholder-shown) + label {
     top: -9px;
     left: -4px;
     padding: 0px 5px;
-    font-weight: 500;
+    font-weight: 400;
     height: 20px;
     font-size: 0.8rem;
     color: rgb(255, 255, 255);
@@ -155,22 +182,21 @@ input:not(:placeholder-shown) + label {
     flex-direction: column;
     align-items: center;
     gap: 5px;
-    padding: 5px;
     text-align: center;
-    min-width: 360px;
-    color: rgb(209, 209, 209);
+    color: rgb(255, 255, 255);
+    width: 100%;
 }
 
 .login a {
-    color: #92BDF9;
+    text-decoration: underline;
 }
 
 .login__button{
     width: 100%;
     height: 45px;
     font-size: 1.1rem;
-    font-weight: 550;
-    font-family: 'Arial', sans-serif;
+    font-weight: 500;
+    letter-spacing: .12rem;
     border-radius: 5px;
     border-style: none;
     border: 2px solid #316FF6;
@@ -197,7 +223,7 @@ input:not(:placeholder-shown) + label {
     display: block;
     text-transform: capitalize;
     font-size: 1.1em;
-    font-weight: 500;
+    font-weight: 450;
     color: red;
 }
 
@@ -222,7 +248,6 @@ input:not(:placeholder-shown) + label {
     width: 270px;
     font-size: 1.2rem;
     text-wrap: nowrap;
-    font-family: 'arial';
     animation: 0.5s fade ease-in;
 }
 
@@ -257,7 +282,6 @@ input:not(:placeholder-shown) + label {
     border-radius: 5px;
     box-shadow: 3px 4px 40px hsla(0, 0%, 0%, 0.849);
     color: #fff;
-    font-family: 'arial', sans-serif;
     background: #316FF6;
 }
 
@@ -287,4 +311,55 @@ input:not(:placeholder-shown) + label {
 
 .hidden {
     display: none;
+}
+
+#toastBox {
+    position: absolute;
+    top: 10px;
+    z-index: 10;
+    right: 10px;
+    display: flex;
+    align-items: flex-end;
+    flex-direction: column;
+    overflow: hidden;
+    padding: 5px;
+    gap: 15px;
+}
+
+.toast {
+    width: 300px;
+    padding: 15px 0px 15px 10px;
+    background: #fff;
+    font-weight: 500;
+    box-shadow: 0 0 5px 1px rgba(0, 0, 0, 0.1);
+    display: flex;
+    align-items: center;
+    position: relative;
+    gap: 10px;
+}
+
+.toast i {
+    font-size: 35px;
+}
+.toast::after {
+    content: '';
+    position: absolute;
+    left: 0;
+    bottom: 0;
+    width: 100%;
+    height: 5px;
+    background: green;
+    animation:  anim 5s linear;
+}
+.toast.error::after{
+    background: red;
+}
+.toast.invalid::after{
+    background: red;
+}
+@keyframes anim {
+    100%{
+        width: 0;
+    }
+    
 }
