--- a/public/pages/watch/watch.css
+++ b/public/pages/watch/watch.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
+
 * {
     margin: 0;
     padding: 0;
@@ -10,32 +12,63 @@ a {
 }
 
 body {
-    font-family: 'Lato', sans-serif;
+    font-family: 'Roboto', sans-serif;
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
     display: flex;
     flex-direction: column;
     text-align: center;
+    position: relative;
     max-width: 100vw;
     min-height: 100vh;
-    color: #04125c;
+    color: #121412;
     line-height: 1.6;
 }
 
+.unauth-parent {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    display: flex;
+    justify-content: center;
+    z-index: 50;
+    background: rgba(18, 20, 18, 0.97);
+}
+
+.unauth-parent .container {
+    height: 100vh;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+    color: #ffffff;
+}
+
+.unauth-parent .container button {
+    padding: 5px 10px;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+    background: #ffcc00;
+    font-size: 1rem;
+    font-size: bolder;
+    font-family: 'Roboto';
+    &:hover {
+        background: hsl(54, 100%, 50%);
+    }
+}
 .landing-page-navbar {
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
     width: 100%;
-    min-height: 10%;
-    padding: 3px;
     background: #04125c;
     box-shadow: 1px 1px 20px rgba(0, 0, 0, 0.377);
 }
 
 #navbar-logo {
-    width: 45px;
+    width: 80px;
     align-items: center;
     display: flex;
 }
@@ -53,7 +86,7 @@ body {
 .navbar-logo-title p {
     width: 150px;
     color: #ffffff;
-    font-size: 1em;
+    font-size: 1rem;
     font-weight: 700;
     justify-content: center;
     align-items: center;
@@ -71,14 +104,23 @@ body {
     padding: 40px 45px;
 }
 
+.login-links span{
+    
+
+}
 .navbar-list {
     display: flex;
     flex-direction: row;
     list-style: none;
     gap: 25px;
-    font-size: 1.2em;
-    font-family: 'Lato', sans-serif;
+    font-size: 1.1rem;
     color: #ffffff;
+}
+
+@media only screen and (min-width:1024px) {
+    .navbar-list {
+        font-size: 1.2rem;
+    }
 }
 
 .navbar-list li {
@@ -109,7 +151,6 @@ body {
 
 .btn-71 p {
     font-size: 1.2em;
-    font-family: 'raleway', sans-serif;
     font-weight: 600;
     color: rgb(250, 235, 215);
     text-shadow: 1px 1px hsla(0, 0%, 0%, 0.3);
@@ -195,6 +236,7 @@ body {
     height: 215px;
     margin: 25px 5px;
     padding: 5px 0px 5px 0px;
+    z-index: 10;
     align-items: left;
     background-color: #f9f9f9;
     box-shadow: -2px -1px 10px rgba(0, 0, 0, 0.336);
@@ -283,7 +325,6 @@ body {
     margin: 0px 0px 0px 15px;
     color:#04125c;
     font-size: 1.2rem;
-    font-family: 'arial' sans-serif;
     font-weight: bold;
 }
 
@@ -315,7 +356,6 @@ body {
     gap: 40px;
     list-style: none;
     font-size: 1.6rem; 
-    font-family: 'Arial', sans-serif;
     font-weight: 550;
 }
 
@@ -327,41 +367,55 @@ body {
 
 .watch-main {
     display: flex;
-    flex-direction: row;
-    align-items: flex-start;
-    justify-content: space-between  ;
-    min-height: 90vh;
-    margin: 40px 0px;
+    flex-direction: column;
+    gap: 40px;
+    padding: 40px 0px;
     flex-shrink: 1;
 }
 
 
 .watch-left-content{
-    width: 50%;
-    flex-shrink: 0;
+    padding: 0px 60px;
+    display: flex;
+    align-items: center;
+    justify-content: flex-start;
 }
 
 .watch-container {
-    /* align-content: center; */
     display: flex;
     flex-direction: column;
-    align-items: center ;
+    gap: 20px;
+    flex: 1;
+    text-align: left;
+}
+
+.my-video-dimensions,
+video {
+    width: 100%;
+    max-width: 700px;
+    height: 400px;
+}
+
+.watch-container h1 {
+    font-size: 1.8rem;
 }
 
 .watch-right-content{
-    /* border: 2px solid black; */
-    flex-shrink: 0;
-    width: 50%;
-}
+    display: flex;
+    padding: 0px 60px;
+    align-items: center;
+    justify-content: flex-start;
+}   
+
 
 .comment-section {
     text-align: left;
     max-width: 600px;
+    flex: 1;
     height: 350px;
     display: flex;
     flex-direction: column;
     justify-content: space-between;
-    margin: 0 auto;
     background: #fff;
     padding: 20px;
     border-radius: 8px;
@@ -370,8 +424,8 @@ body {
 
 .comments {
     height: 300px;
-    overflow-y: auto; /* Enable vertical scrolling */
-    border: 1px solid #ddd; /* Optional: Add a border to the container */
+    overflow-y: auto;
+    border: 1px solid #ddd;
     padding: 10px;
     margin-bottom: 20px;
     border-radius: 4px;
@@ -447,7 +501,61 @@ textarea, input[type="text"] {
     justify-content: center; 
     color: #92BDF9;
 }
-/* 
-@media screen and (max-width: ) {
+
+
+@media (max-width: 768px) {
+    .my-video-dimensions {
+        height: 300px;
+    }
+    .watch-main {
+        gap: 30px;
+        padding: 35px 0px;
+    }
     
-} */
+    
+    .watch-left-content{
+        padding: 0px 45px;
+    }
+    
+    .watch-container {
+        gap: 15px;
+    }
+    
+    .watch-container h1 {
+        font-size: 1.5rem;
+    }
+    
+    .watch-right-content{
+        padding: 0px 45px;
+    }  
+    
+    .navbar-list {
+        gap: 15px;
+        font-size: 1rem;
+    }
+}
+
+@media only screen and (max-width: 640px) {
+    .navbar-list {
+        display: none;
+    }
+    .my-video-dimensions {
+        height: 250px;
+    }
+    
+    
+    .watch-left-content{
+        padding: 0px 15px;
+    }
+    
+    
+    .watch-right-content{
+        padding: 0px 15px;
+    } 
+    .navbar-box {
+        padding: 40px 15px;
+    }
+    #navbar-logo {
+        width: 65px;
+    }
+}
