--- a/public/dashboard/style.css
+++ b/public/dashboard/style.css
@@ -497,3 +497,59 @@ hr {
         height: 100%;
     }
 }
+
+#toastBox {
+    position: absolute;
+    top: 10px;
+    z-index: 20;
+    right: 20px;
+    display: flex;
+    align-items: flex-end;
+    flex-direction: column;
+    overflow: hidden;
+    padding: 0px 20px;
+    gap: 15px;
+}
+
+.toast {
+    width: 300px;
+    padding: 15px 0px 15px 10px;
+    background: #fff;
+    font-weight: 500;
+    box-shadow: 0 0 5px 1px rgba(0, 0, 0, 0.1);
+    display: flex;
+    align-items: center;
+    position: relative;
+    gap: 10px;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    white-space: nowrap;
+    transition: 300ms;
+    animation: to-left 500ms linear;
+}
+
+.toast i {
+    font-size: 30px;
+}
+.toast::after {
+    content: '';
+    position: absolute;
+    left: 0;
+    bottom: 0;
+    width: 100%;
+    height: 5px;
+    background: green;
+    animation:  anim 5s linear;
+}
+.toast.error::after{
+    background: red;
+}
+.toast.invalid::after{
+    background: orange;
+}
+@keyframes anim {
+    100%{
+        width: 0;
+    }
+    
+}
