--- a/public/pages/register/register.css
+++ b/public/pages/register/register.css
@@ -293,7 +293,7 @@ select:not(:placeholder-shown) + label{
     align-items: center;
     justify-content: flex-end;
     gap: 5px;
-    padding: 5px;
+    padding: 25px 5px 5px 5px;
     width: 100%;
     text-align: left;
     min-width: 300px;
@@ -465,4 +465,60 @@ select:not(:placeholder-shown) + label{
 
 .hidden {
     display: none;
+}
+
+
+#toastBox {
+    position: absolute;
+    top: 10px;
+    z-index: 20;
+    right: 10px;
+    display: flex;
+    align-items: flex-end;
+    flex-direction: column;
+    overflow: hidden;
+    padding: 5px;
+    gap: 15px;
+}
+
+.toast {
+    width: 300px;
+    padding: 15px 0px 15px 10px;
+    background: #fff;
+    font-weight: 500;
+    box-shadow: 0 0 5px 1px rgba(0, 0, 0, 0.1);
+    display: flex;
+    align-items: center;
+    position: relative;
+    gap: 10px;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    transition: 300ms;
+    animation: to-left 500ms linear;
+}
+
+.toast i {
+    font-size: 30px;
+}
+.toast::after {
+    content: '';
+    position: absolute;
+    left: 0;
+    bottom: 0;
+    width: 100%;
+    height: 5px;
+    background: green;
+    animation:  anim 5s linear;
+}
+.toast.error::after{
+    background: red;
+}
+.toast.invalid::after{
+    background: orange;
+}
+@keyframes anim {
+    100%{
+        width: 0;
+    }
+    
 }
